--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "Serve a multi-build PRPL app from Firebase",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "The Polymer Project Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "prpl-server": "^0.1.3",
-    "useragent": "^2.1.13"
+    "minimatch": "^3.0.4",
+    "prpl-server": "^0.1.3"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2"
   }
 }
