--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "minimatch": "^3.0.4",
-    "prpl-server": "^0.1.3"
+    "prpl-server": "github:graynorton/prpl-server-node"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
